SASS boilerplate file updates

--- a/public/assets/sass/base/_grid.scss
+++ b/public/assets/sass/base/_grid.scss
@@ -1,8 +1,6 @@
-// --------------------------------------------------------------------------
-//
-//   Grid
-//
-// --------------------------------------------------------------------------
+/*=============================================>>>>>
+= Grid =
+===============================================>>>>>*/
 
 // ----- Default grid settings ----- //
 
