--- a/public/assets/sass/base/_print.scss
+++ b/public/assets/sass/base/_print.scss
@@ -1,5 +1,5 @@
 /*=============================================>>>>>
-= Print Stylesheet =
+= Print Resets =
 ===============================================>>>>>*/
 
 @media print {
