--- a/public/assets/sass/base/_typography.scss
+++ b/public/assets/sass/base/_typography.scss
@@ -1,9 +1,7 @@
-// --------------------------------------------------------------------------
-//
-//  Type
-//    Default typographic styles and elements
-//
-// --------------------------------------------------------------------------
+/*=============================================>>>>>
+= Default typography styles =
+===============================================>>>>>*/
+
 
 body {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, Helvetica, Sans-serif;
