--- a/public/assets/sass/components/Common/_Header.scss
+++ b/public/assets/sass/components/Common/_Header.scss
@@ -1,6 +1,3 @@
 /*=============================================>>>>>
-= Header =
+= Header Component Styles =
 ===============================================>>>>>*/
-header{
-  
-}
