--- a/public/assets/sass/components/Content/_FourOhFour.scss
+++ b/public/assets/sass/components/Content/_FourOhFour.scss
@@ -1,3 +1,3 @@
 /*=============================================>>>>>
-= 404 =
+= 404 Component Styles =
 ===============================================>>>>>*/
