--- a/public/assets/sass/components/Content/_Loading.scss
+++ b/public/assets/sass/components/Content/_Loading.scss
@@ -1,3 +1,3 @@
 /*=============================================>>>>>
-= Loading =
+= Loading Component Styles =
 ===============================================>>>>>*/
