--- a/public/assets/sass/helpers/_icons.scss
+++ b/public/assets/sass/helpers/_icons.scss
@@ -1,3 +1,3 @@
 /*=============================================>>>>>
-= Icon Helper for use with IcoMoon or other icon fonts =
+= Icon Helper (for use with IcoMoon or other icon fonts) =
 ===============================================>>>>>*/
