Changed base line height from 1.9 to 1.75em, closes #51

--- a/public/assets/sass/base/_typography.scss
+++ b/public/assets/sass/base/_typography.scss
@@ -8,7 +8,7 @@ body {
   font-size: 16px;
   font-weight: normal;
   font-size-adjust: auto;
-  line-height: 1.9;
+  line-height: 1.75em;
   text-align: left;
   word-wrap: break-word;
   text-rendering: optimizeLegibility;
