Production build fixes and SASS testing

--- a/app/components/Common/Logo.scss
+++ b/app/components/Common/Logo.scss
@@ -1,6 +1,7 @@
 /*=============================================>>>>>
-= Header Component Styles =
+= Logo Component Styles =
 ===============================================>>>>>*/
-header#banner {
-
+.logo {
+  background: $black;
+  color: $white;
 }
