Significant progress on MiniCart

--- a/app/components/Common/Header.scss
+++ b/app/components/Common/Header.scss
@@ -2,5 +2,8 @@
 = Header Component Styles =
 ===============================================>>>>>*/
 header#banner {
-
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
