--- a/app/components/Woocommerce/MiniCart.scss
+++ b/app/components/Woocommerce/MiniCart.scss
@@ -33,12 +33,9 @@
     }
   }
   .cart-dropdown {
-    display: none;
     position: absolute;
-    top: auto;
-    left: auto;
-    bottom: -10px;
-    right: 0px;
+    top: calc(100% + 15px);
+    right: 15px;
     width: 350px;
     border: 1px solid rgba($black, 0.2);
 
@@ -48,9 +45,9 @@
         display: flex;
         flex-direction: row;
         border-bottom: 1px solid rgba($black, 0.2);
-        &:first-child {
-          border-top: 1px solid rgba($black, 0.2);
-        }
+        // &:first-child {
+        //   border-top: 1px solid rgba($black, 0.2);
+        // }
 
         .product-image {
           display: block;
