--- a/app/components/Woocommerce/CartTable.scss
+++ b/app/components/Woocommerce/CartTable.scss
@@ -97,6 +97,44 @@
   }
 
   .table-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding: 20px;
 
+    .totals {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      min-width: 450px;
+
+      .row {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        border-bottom: 1px solid rgba($black, 0.3);
+
+
+        span {
+
+          &.label {
+
+          }
+
+          &.value {
+
+          }
+        }
+
+        &.total {
+          .value {
+            font-size: 22px;
+            font-weight: bold;
+          }
+        }
+      }
+    }
   }
 }
