--- a/app/containers/Product.scss
+++ b/app/containers/Product.scss
@@ -1,3 +1,46 @@
 .product-page {
 
+  .wrap {
+
+    .gallery {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+
+      img {
+        max-height: 400px;
+        width: auto;
+      }
+    }
+
+    .related-products {
+
+      .related-products-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        .related-product {
+          flex: 1;
+          max-width: calc(33.3% - 15px);
+          margin-right: 15px;
+
+          &:last-child {
+            margin-right: 0;
+          }
+
+          img {
+            width: 100%;
+            height: auto;
+          }
+        }
+      }
+    }
+
+
+
+  }
+
+
 }
