Better code reuse between products & related products

--- a/app/containers/Product.scss
+++ b/app/containers/Product.scss
@@ -21,7 +21,7 @@
         flex-wrap: wrap;
         justify-content: center;
 
-        .related-product {
+        .product {
           flex: 1;
           max-width: calc(33.3% - 15px);
           margin-right: 15px;
