--- a/app/components/Content/Loading.scss
+++ b/app/components/Content/Loading.scss
@@ -1,6 +1,32 @@
 /*=============================================>>>>>
 = Loading Component Styles =
 ===============================================>>>>>*/
+
 .loading {
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 90vh;
+  background: $white;
+
+  &.inline {
+    height: 100%;
+    background: transparent;
+  }
+
+  .loading-indicator {
+    margin-bottom: 20vh;
+    width: 75px;
+    height: 75px;
+    background-image: url('../../images/loading.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @include media($mobile-down) {
+      width: 50px;
+      height: 50px;
+    }
+  }
 }
