--- a/app/components/Content/Loading.scss
+++ b/app/components/Content/Loading.scss
@@ -10,15 +10,10 @@
   height: 90vh;
   background: $white;
 
-  &.inline {
-    height: 100%;
-    background: transparent;
-  }
-
   .loading-indicator {
-    margin-bottom: 20vh;
     width: 75px;
     height: 75px;
+    margin-bottom: 20vh; // Slightly raise loading indicator
     background-image: url('../../images/loading.svg');
     background-size: cover;
     background-position: center;
@@ -27,6 +22,15 @@
     @include media($mobile-down) {
       width: 50px;
       height: 50px;
+    }
+  }
+
+  &.inline {
+    height: 100%;
+    background: transparent;
+
+    .loading-indicator {
+      margin-bottom: 0;
     }
   }
 }
