--- a/app/sass/base/_typography.scss
+++ b/app/sass/base/_typography.scss
@@ -1,6 +1,26 @@
 /*=============================================>>>>>
 = Default typography styles =
 ===============================================>>>>>*/
+
+@mixin headings-font() {
+  font-family: 'Nunito', Sans-Serif;
+}
+
+@mixin body-font() {
+  font-family: 'Open Sans', Sans-Serif;
+}
+
+// Font weights
+$font-weight-thin: 100;
+$font-weight-extra-light: 200;
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-medium: 500;
+$font-weight-semi-bold: 600;
+$font-weight-bold: 700;
+$font-weight-extra-bold: 800;
+$font-weight-black: 900;
+
 body {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, Helvetica, Sans-serif;
   font-size: 16px;
