More merge fixes

--- a/app/components/Common/Header.scss
+++ b/app/components/Common/Header.scss
@@ -2,8 +2,10 @@
 = Header Component Styles =
 ===============================================>>>>>*/
 header#banner {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  .wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
