--- a/app/sass/base/_grid.scss
+++ b/app/sass/base/_grid.scss
@@ -9,16 +9,11 @@ $grid-columns:        12;
 $gap:                 20px;
 $default-feature:     max-width;
 
-.wrap {
-  max-width: $max-width;
-  padding: 0 20px;
-  margin: 0 auto;
-}
-
 
 // --- Wrapping Element --- //
 
 .wrap {
+  width: 100%;
   max-width: $max-width;
   padding: 0 $gap;
   margin-left: auto;
