--- a/app/components/Cart/MiniCart.scss
+++ b/app/components/Cart/MiniCart.scss
@@ -22,6 +22,7 @@
       line-height: 1;
       z-index: 2;
       margin: -0.5px;
+      color: $white;
       &:before {
         content: '';
         @include center-align();
@@ -43,6 +44,6 @@
     right: 15px;
     width: 350px;
     border: 1px solid rgba($black, 0.2);
-
+    background-color: $white;
   }
 }
