--- a/app/components/Content/Loading.scss
+++ b/app/components/Content/Loading.scss
@@ -19,7 +19,7 @@
     background-position: center;
     background-repeat: no-repeat;
 
-    @include media($mobile-down) {
+    @include media-down(mobile) {
       width: 50px;
       height: 50px;
     }
