--- a/app/containers/App.scss
+++ b/app/containers/App.scss
@@ -1,3 +1,11 @@
 /*=============================================>>>>>
 = App Styles =
 ===============================================>>>>>*/
+.wrap {
+  display: block;
+  width: 100%;
+  max-width: 1320px;
+  padding: 0 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
