Improvements to Global Style Import fixes

--- a/app/sass/global/styles.scss
+++ b/app/sass/global/styles.scss
@@ -2,6 +2,7 @@
 = Global Styles =
 ===============================================>>>>>*/
 
-@import "fonts";
 @import "reset";
 @import "print";
+@import "fonts";
+@import "typography";
