Added reusable Modal component (app/components/Common/Modal)

--- a/app/containers/App.scss
+++ b/app/containers/App.scss
@@ -1,6 +1,17 @@
 /*=============================================>>>>>
 = App Styles =
 ===============================================>>>>>*/
+
+#app {
+  position: relative;
+  // Prevent background scroll when modal is open
+  &.modal-open {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+  }
+}
+
 .wrap {
   display: block;
   width: 100%;
