Patched up Modal code

--- a/app/containers/App.scss
+++ b/app/containers/App.scss
@@ -2,7 +2,7 @@
 = App Styles =
 ===============================================>>>>>*/
 
-#app {
+body {
   position: relative;
   // Prevent background scroll when modal is open
   &.modal-open {
