--- a/app/sass/base/_mixins.scss
+++ b/app/sass/base/_mixins.scss
@@ -97,3 +97,25 @@
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
 }
+
+/*=============================================>>>>>
+= Clearfix =
+===============================================>>>>>*/
+
+@mixin clear {
+ // For modern browsers
+  &:before,
+  &:after {
+    content:" ";
+    display:table;
+  }
+
+  &:after {
+    clear:both;
+  }
+
+  // For IE 6/7 (trigger hasLayout)
+  & {
+    *zoom:1;
+  }
+}
