--- a/app/containers/ProductCategory.scss
+++ b/app/containers/ProductCategory.scss
@@ -26,11 +26,11 @@
         .product {
           width: calc(33.3% - 15px);
 
-          @include media($tablet-down) {
+          @include media-down(tablet) {
             width: calc(50% - 15px);
           }
-          @include media($mobile-down) {
-            width: calc(100%);
+          @include media-down(mobile) {
+            width: 100%;
           }
 
           &:first-child {
