--- a/app/components/Product/Gallery.scss
+++ b/app/components/Product/Gallery.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
 
-  .active-image, .magnifier-image {
+  .active-image {
     display: block;
     max-height: 400px;
     width: auto;
@@ -15,7 +15,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
 
     .gallery-image {
@@ -23,8 +23,13 @@
       padding-bottom: calc((100/7)% - 5px);
       position: relative;
       margin-bottom: 5px;
+      margin-left: 5px;
       cursor: pointer;
-      
+
+      &:first-child {
+        margin-left: 0;
+      }
+
       .inner-image {
         display: block;
         @include center-align(absolute);
