--- a/app/components/Product/QuantitySelector.scss
+++ b/app/components/Product/QuantitySelector.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-bottom: 20px;
 
   .quantity-button {
     height: 30px;
@@ -49,11 +50,7 @@
 
   .quantity-counter {
     display: block;
-    width: 75px;
     padding: 10px 20px;
-    background-color: $white;
-    border: 1px solid $off-black;
-    border-radius: 30px;
     text-align: center;
   }
 }
