--- a/app/components/Products/ProductListItem.scss
+++ b/app/components/Products/ProductListItem.scss
@@ -4,12 +4,10 @@
   justify-content: center;
   background-color: $white;
 
-  .inner-image {
+  .product-image {
     width: 230px;
     height: 300px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    object-fit: cover;
     position: relative;
     margin-left: auto;
     margin-right: auto;
