--- a/app/components/Cart/MiniCartContent.scss
+++ b/app/components/Cart/MiniCartContent.scss
@@ -1,55 +1,85 @@
 
 .cart-contents {
+  padding: 25px 20px;
 
-  .cart-items {
-    .cart-item {
-      height: 100px;
+  &.cart-empty {
+    padding: 40px 20px;
+    .cart-actions {
       display: flex;
       flex-direction: row;
-      border-bottom: 1px solid rgba($black, 0.2);
-      // &:first-child {
-      //   border-top: 1px solid rgba($black, 0.2);
-      // }
+      justify-content: center;
+    }
+  }
+
+  .cart-title {
+    display: block;
+    font-size: 30px;
+    margin-bottom: 15px;
+  }
+
+  .empty-cart-message {
+    display: block;
+    margin-bottom: 30px;
+  }
+
+  .cart-items {
+    max-height: 400px;
+    overflow-y: scroll;
+
+    .cart-item {
+      display: flex;
+      flex-direction: row;
+      border-top: 1px solid $off-white;
+      padding: 20px 0px;
 
       .product-image {
         display: block;
-        height: 100px;
-        width: 100px;
-        background-color: $off-white;
+        height: 80px;
+        width: 80px;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-right: 10px;
       }
 
       .product-info {
         flex: 1;
         display: flex;
         flex-direction: column;
-        padding: 10px;
+        justify-content: space-between;
+        margin-left: 10px;
+        margin-bottom: 10px;
 
         .name {
-          text-align: right;
-          font-weight: bold;
-        }
-
-        .quantity {
-          text-align: right;
-          font-size: 12px;
-        }
-
-        .item-footer {
-          flex: 1;
           display: flex;
           flex-direction: row;
           justify-content: space-between;
-          align-items: flex-end;
+
+          span {
+            text-align: left;
+          }
 
           .remove-button {
-            color: $primary;
-            font-size: 12px;
-            text-decoration: underline;
+            display: block;
+            height: 12px;
+            width: 12px;
+            color: $off-white;
+            margin-left: 20px;
 
-            &:hover {
+            &:hover, &:active, &:focus {
               text-decoration: none;
             }
+
+            &:after {
+              content: 'x';
+              font-size: 12px;
+              color: $off-black;
+              transition: color 0.3s ease;
+            }
           }
+        }
+
+        .subtotal {
         }
       }
     }
@@ -61,19 +91,19 @@
       justify-content: space-between;
       align-items: baseline;
       padding: 20px 10px;
-      background-color: $off-white;
+      margin-bottom: 30px;
 
       &.subtotal {
-        .value {
-          font-weight: bold;
-          font-size: 18px;
-        }
+        font-size: 18px;
+        background-color: $off-white;
+        padding: 20px 10px;
       }
     }
   }
   .cart-actions {
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
 
     .cart-action {
       flex: 1;
@@ -99,11 +129,11 @@
 }
 
 .empty-cart {
-  padding: 100px 20px;
+  padding: 80px 20px 180px;
   text-align: center;
+  font-size: 18px;
 
   span {
-    @include headings-font();
     display: block;
 
     &.title {
