Isolated WooCommerce related components to app/components/WooCommerce/

--- a/app/components/WooCommerce/Cart/MiniCart.scss
+++ b/app/components/WooCommerce/Cart/MiniCart.scss
@@ -11,7 +11,7 @@
     display: block;
     width: 40px;
     height: 35px;
-    background-image: url('../../images/minicart.svg');
+    background-image: url('../../../images/minicart.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
