--- a/app/components/WooCommerce/Common/CheckoutProgressBar.scss
+++ b/app/components/WooCommerce/Common/CheckoutProgressBar.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   background-color: $white;
-  border: 1px solid $grey;
+  border: 1px solid $off-white;
   border-radius: 30px;
   width: 100%;
   margin: 30px 0 60px;
@@ -18,6 +18,7 @@
 
     a, span {
       color: $secondary;
+      z-index: 1;
     }
 
     a {
@@ -28,6 +29,22 @@
 
       &:hover {
         text-decoration: none;
+      }
+    }
+
+    .after-triangle {
+      @include vertical-align(absolute);
+      left: auto;
+      right: 1px;
+      transform: translateX(100%) translateY(-50%);
+      height: 100%;
+      background-color: $white;
+      svg {
+        height: 100%;
+        .triangle {
+          fill: $white;
+          stroke: $black;
+        }
       }
     }
 
@@ -56,10 +73,26 @@
 
     &.complete {
       background-color: darken($secondary, 5%);
+
+      .after-triangle {
+        svg {
+          .triangle {
+            fill: darken($secondary, 5%);
+          }
+        }
+      }
     }
 
     &.active {
       background-color: $secondary;
+
+      .after-triangle {
+        svg {
+          .triangle {
+            fill: $secondary;
+          }
+        }
+      }
     }
   }
 }
