--- a/app/components/WooCommerce/Common/CheckoutProgressBar.scss
+++ b/app/components/WooCommerce/Common/CheckoutProgressBar.scss
@@ -17,7 +17,10 @@
     padding: 15px 10px;
 
     a, span {
+      @include headings-font();
+      font-size: 14px;
       color: $primary;
+      letter-spacing: 0.1em;
       text-transform: uppercase;
       z-index: 1;
     }
@@ -35,6 +38,7 @@
       background-color: $white;
       -webkit-clip-path: polygon(0 0, 0% 100%, 100% 50%);
       clip-path: polygon(0 0, 0% 100%, 100% 50%);
+      z-index: 1;
     }
 
     &:last-child {
